--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,11 +8,13 @@
 
   </head>
   <body>
+    <script src="/bower_components/jquery/dist/jquery.js"></script>
+
     {{> menu}}
     {{{body}}}
     
 
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
+    <script src="/bower_components/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
   </body>
 </html>
