--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -9,7 +9,11 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fas fa-shopping-cart"></i> Shopping Cart</a>
+                <a class="nav-link" href="/shopping-cart">
+                    <i class="fas fa-shopping-cart"></i> 
+                    Shopping Cart
+                    <div class="badge  badge-secondary">{{session.cart.totalQty}}</div>
+                </a>
             </li>
             <li class="nav-item dropdown">
                 {{#if login}}
