--- a/views/shop/checkout.hbs
+++ b/views/shop/checkout.hbs
@@ -4,7 +4,9 @@
         <h4>Your total: ${{total}}</h4>
 
         <!-- Used to display Element errors. -->
-        <div id="card-errors" role="alert"></div>
+        <div id="card-errors" role="alert" class="{{#if noError}}hidden{{/if}}">
+            {{errMsg}}
+        </div>
 
         <form action="/checkout" method="POST" id="payment-form">
             <div class="form-group">
