reduce , remove > (items cart) | log in force, order profile view

--- a/views/shop/shopping-cart.hbs
+++ b/views/shop/shopping-cart.hbs
@@ -18,8 +18,8 @@
                             Action
                         </button>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Reduce by 1</a>
-                            <a class="dropdown-item" href="#">reduce by all</a>
+                            <a class="dropdown-item" href="/reduce/{{this.item._id}}">Reduce by 1</a>
+                            <a class="dropdown-item" href="/remove/{{this.item._id}}">reduce by all</a>
                         </div>
                     </div>
                 </div>                
