--- a/views/shop/checkout.hbs
+++ b/views/shop/checkout.hbs
@@ -9,40 +9,21 @@
         </div>
 
         <form action="/checkout" method="POST" id="payment-form">
+
+            <div class="form-group">
+                <label for="name">Full Name</label>
+                <input type="text" class="form-control" name="name" aria-describedby="nameHelp" placeholder="Enter your full name">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Address</label>
+                <input type="text" class="form-control" name="address" placeholder="Address">
+            </div>
             <div class="form-group">
                 <label for="card-element">Full Name</label>
                 <div id="card-element">
-
+            
                 </div>
-                <!--<input type="text" class="form-control" id="card-name" aria-describedby="nameHelp" placeholder="Enter your full name">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>-->
             </div>
-            <!--<div class="form-group">
-                <label for="name">Address</label>
-                <input type="text" class="form-control" id="name" aria-describedby="nameHelp" placeholder="Enter your full name">
-            </div>
-            <div class="form-group">
-                <label for="exampleInputPassword1">Card Holder Name</label>
-                <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Password">
-            </div>
-            <div class="form-group">
-                <label for="name">Credit Card Number</label>
-                <input type="text" class="form-control" id="card-number" aria-describedby="nameHelp" placeholder="Enter your full name">
-            </div>
-            <div class="form-row">
-                <div class="form-group col-md-5">
-                    <label for="expmonth">Expiration Month</label>
-                    <input type="text" class="form-control" id="card-expiry-month">
-                </div>
-                <div class="form-group col-md-4">
-                    <label for="expyear">Expiration Year</label>
-                    <input type="text" class="form-control" id="card-expiry-year">
-                </div>
-                <div class="form-group col-md-3">
-                    <label for="cvc">CVC</label>
-                    <input type="text" class="form-control" id="card-cvc">
-                </div>
-            </div>-->
             <button type="submit" class="btn btn-primary">Checkout</button>
         </form>
     </div>
