--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -1,1 +1,27 @@
-<h1>Profilere</h1>
+<div class="container">
+    <div class="row align-items-center justify-content-md-center">
+        <div class="col-md-8">
+            Profile: {{user}}
+            {{#each orders}}
+                <div class="card border-dark mb-3">
+                    {{#each this.items}}
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                {{this.item.title}}
+                                <span class="badge badge-secondary">Units: {{this.qty}}</span>
+                            </h5>
+                            <p class="card-text">{{this.item.description}}</p>
+                            <div class="text-right">
+                                ${{this.item.price}}
+                            </div>
+                            <!--<a href="#" class="btn btn-primary">Go somewhere</a>-->
+                        </div>
+                    {{/each}}
+                        <div class="card-footer text-muted">
+                            Total Price: ${{this.cart.totalPrice}}
+                        </div>
+                </div>
+            {{/each}}            
+        </div>
+    </div>
+</div>
