--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-    <a class="navbar-brand" href="/">Navbar</a>
+    <a class="navbar-brand" href="/">E-Commerce</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
                 <a class="nav-link" href="/shopping-cart">
-                    <i class="fas fa-shopping-cart"></i> 
+                    <i class="fas fa-shopping-cart"></i>
                     Shopping Cart
                     <div class="badge  badge-secondary">{{session.cart.totalQty}}</div>
                 </a>
@@ -35,7 +35,7 @@
                     <a class="dropdown-item" href="/user/signin">Sign In</a>
                 </div>
                 {{/if}}
-                
+
             </li>
         </ul>
     </div>
