--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -7,19 +7,21 @@
         </div>
     </div>
 </div>
-<div class="container">
-    <h1>{{title}}</h1>
+{{> slider }}
+<div class="container pt-5">
+    <h1 class="display-4">New Merch</h1>
      {{#each products}}
     <div class="row">
         {{#each this}}
-        <div class="col-md-3">
-            <div class="card" style="width: 18rem;">
+        <div class="col-md-4">
+            <div class="card" style="">
                 <img class="card-img-top" src="{{this.imagePath}}" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">{{this.title}}</h5>
                     <p class="card-text">${{this.price}}</p>
                     <p class="card-text">{{this.description}}</p>
                     <a href="/add-to-cart/{{this._id}}" class="btn btn-primary">Add to the Shopping Cart</a>
+                    <a href="/detail/{{this._id}}" class="btn btn-info">Details</a>
 
                 </div>
             </div>
