--- a/views/partials/admin/menu.hbs
+++ b/views/partials/admin/menu.hbs
@@ -15,7 +15,7 @@
         <a class="nav-link" href="#">Warehose</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Log Out</a>
+        <a class="nav-link" href="/admin/logout">Log Out</a>
       </li>
     </ul>
   </div>
