--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-    <a class="navbar-brand" href="/">E-Commerce</a>
+    <a class="navbar-brand" href="/">Settle Valley</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -15,8 +15,8 @@
                     <div class="badge  badge-secondary">{{session.cart.totalQty}}</div>
                 </a>
             </li>
+            {{#if login}}
             <li class="nav-item dropdown">
-                {{#if login}}
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">
                     <i class="fas fa-user"></i> User Management
@@ -25,7 +25,9 @@
                     <a class="dropdown-item" href="/user/profile">Profile</a>
                     <a class="dropdown-item" href="/user/logout">Log Out</a>
                 </div>
-                {{else}}
+            </li>
+            {{else}}
+            <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">
                     <i class="fas fa-user"></i> User Management
@@ -34,9 +36,23 @@
                     <a class="dropdown-item" href="/user/signup">Sign Up</a>
                     <a class="dropdown-item" href="/user/signin">Sign In</a>
                 </div>
-                {{/if}}
-
             </li>
+            {{/if}}
+            
+            {{#unless login}}
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="false">
+                    <i class="fas fa-user"></i> Admin Management
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/admin/signup">Sign Up</a>
+                    <a class="dropdown-item" href="/admin/signin">Sign In</a>
+                </div>
+            </li>
+            {{else}}
+            Hola
+            {{/unless}}
         </ul>
     </div>
     </div>
